UV sculpt brush widgets are available when not in uv sculpt mode. #47842

Closed
opened 2016-03-18 20:36:56 +01:00 by Isaac Weaver · 6 comments

System Information
OS: Ubuntu linux 14.04 LTS 64bit
Graphics: GeForce GT 620/PCIe/SSE2

Blender Version
Broken: 2.77 latest daily build (3d59be3001)

Short description of error
When UV editing, if you go into uv sculpt mode and then back out, pressing the F key will bring up the brush size widget. Similarly Shift-F will bring up the brush strength widget.

Exact steps for others to reproduce the error

  1. Enable then disable the UV sculpt tools.
  2. Press F or Shift-F
    UV-sculpt-widget.blend
**System Information** OS: Ubuntu linux 14.04 LTS 64bit Graphics: GeForce GT 620/PCIe/SSE2 **Blender Version** Broken: 2.77 latest daily build (3d59be3001c5c4ca3763d8b1bed81aeaefd2c97f) **Short description of error** When UV editing, if you go into uv sculpt mode and then back out, pressing the `F` key will bring up the brush size widget. Similarly `Shift-F` will bring up the brush strength widget. **Exact steps for others to reproduce the error** 1. Enable then disable the UV sculpt tools. 2. Press `F` or `Shift-F` [UV-sculpt-widget.blend](https://archive.blender.org/developer/F296771/UV-sculpt-widget.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IsaacWeaver

Added subscriber: @IsaacWeaver
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

caused by 5b3af3dd
possible fix here D1861

caused by 5b3af3dd possible fix here [D1861](https://archive.blender.org/developer/D1861)

This issue was referenced by 2c3985d9e6

This issue was referenced by 2c3985d9e684b855cc765863bd4af02fb72e3fe3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47842
No description provided.